added the top-header and body-header

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,9 @@ $fontFamily: "Montserrat";
 $fontSize: rem(18); 
 
 $mainColor: #000; 
+$mainDarkColor: #141414;
+
+
 
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
