--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,15 +1,233 @@
-//====================================================================================================
 
-//====================================================================================================
+.header {
 
-//Burger
-/*
+	&__top {
+		background-color: $mainDarkColor;
+		color: #fff;
+	}
+
+	&__body {
+		background-color: #ECF1F2;
+	}
+
+	&__catalog {
+	}
+}
+.top-header {
+	padding: rem(10) 0;
+
+	&__container {
+		display: flex;
+		align-items: center;
+		gap: rem(20);
+		min-height: rem(50);
+	}
+
+	&__menu {
+		flex: 1 1 auto;
+	}
+
+	&__user {
+		display: inline-flex;
+		align-items: center;
+		font-weight: 600;
+		line-height: math.div(22 ,18);
+		
+		&::before{
+			font-size: rem(28);
+			margin-right: em(15,28);
+		}
+	}
+}
+.menu {
+
+	&__list {
+		display: flex;
+		gap: rem(60);
+		flex-wrap: wrap;
+		line-height: math.div(20,16);
+		row-gap: rem(5);
+		@include adaptiveValue ("column-gap", 60, 20);
+	}
+
+	&__link {
+		font-style: rem(16);
+	}
+}
+.body-header {
+	padding: rem(10) 0;
+	background-color: #ecf1f2;
+	&__container{
+		display: flex;
+		min-height: rem(70);
+		align-items: center;
+	}
+	&__logo{
+		@extend%ic;
+		@extend ._icon-logo;
+		font-size: rem(42);
+		color: $mainDarkColor;
+	}
+	&__search{
+		flex: 1 1 auto;
+		padding-right: rem(20);
+		@include adaptiveValue("padding-left", 158,20)
+	}
+}
+.actions-header {
+	display: flex;
+	align-items: center;
+	column-gap: rem(30);
+
+	&__location {
+		display: inline-flex;
+		align-items: center;
+		font-weight: 600;
+		margin: 0 rem(25) 0 0;
+		&::before{
+			font-size: rem(24);
+			margin: 0 em(10,24) 0 0;
+		}
+	}
+	&__favorite {
+		font-size: rem(27);
+	}
+
+	&__cart {
+		flex: 0 0 auto;
+	}
+}
+.search-header{
+	max-width: rem(377);
+	background-color: rgba(7, 7, 7, 0.03);
+	border-radius: rem(3);
+	position: relative;
+	border: 1px solid rgba(4, 4, 4, 0.5);
+
+	&__button{
+		position: absolute;
+		background-color: transparent;
+		height: rem(41);
+		width: rem(41);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		top: 0;
+		left: rem(8);
+		font-size: rem(14);
+		color: rgba(0, 0, 0, 0.5);
+	}
+	&__input{
+		width: 100%;
+		background-color: transparent;
+		border-radius: rem(3);
+		height: rem(41);
+		color: $mainColor;
+		padding: 0 rem(20) 0 rem(50);
+		&::placeholder{
+			color: rgba (0, 0, 0, 0.5);
+		}
+	}
+}
+.phones-header {
+
+	&__item {
+		position: relative;
+		display: flex;
+	}
+
+	&__phone {
+		font-weight: 600;
+		line-height: math.div(22,18);
+		white-space: nowrap;
+	}
+
+	&__arrow {
+		color: #e8aa31;
+		font-size: rem(10);
+		margin: 0 0 0 em(17,16);
+		transition: transform 0.3s ease 0s;
+
+		&._spoller-active{
+			transform: rotate(180deg);
+		}
+	}
+
+	&__list {
+		position: absolute;
+		top: 100%;
+		width: 100%;
+		left: 0;
+		background-color: #fff;
+		padding: rem(15);
+		border-radius: rem(10);
+		margin: rem(5) 0 0 0;
+		box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+
+		li{
+			&:not(:last-child) {margin-bottom: em(5,18);}
+		}
+	}
+
+	&__callback {
+		color:#e8aa31;
+		font-weight: 700;
+		line-height: math.div(22 ,18 );
+		margin: rem(3) 0 0 0;
+	}
+}
+.cart-header {
+	display: flex;
+	column-gap: 15px;
+	align-items: center;
+
+	&__icon {
+		flex: 0 0 37px;
+		font-size: rem(35);
+		position: relative;
+		span{
+			position: absolute;
+			width: rem(14);
+			height: rem(14);
+			background:#e8aa31;
+			font-size: rem(10);
+			border-radius: 50%;
+			display: flex;
+			top: 0;
+			right: 0;
+			color: #fff;
+			justify-content: center;	
+			align-items: center;			
+		}
+	}
+
+	&__body {
+		font-size: rem(16);
+		line-height: math.div(20 ,16 );
+	}
+
+	&__sum {
+		font-weight: 500;
+		&:not(:last-child){
+			margin-bottom: em (5,16);
+		}
+	}
+
+	&__link {
+		color:#e8aa31;
+	}
+}
+
+
+
+// Burger
+
 .icon-menu {
 	display: none;
 	@media (max-width: $mobile) {
 		display: block;
 		position: relative;
-		width: rem(30);
+		flex: 0 0 30px;
 		height: rem(18);
 		cursor: pointer;
 		z-index: 5;
@@ -22,7 +240,7 @@
 			position: absolute;
 			width: 100%;
 			height: rem(2);
-			background-color: #000;
+			background-color: #fff;
 		}
 		&::before {
 			top: 0;
@@ -51,4 +269,3 @@
 		}
 	}
 }
-*/
