--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -47,6 +47,27 @@
 }
 .menu {
 
+	&__body{
+		@media (max-width: $tablet){
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			overflow: auto;
+			background-color: $mainDarkColor;
+			z-index: 2;
+			padding: rem(50) rem(15);
+			  
+		}
+	}
+	@media (max-width: $tablet){
+		flex: 0 0 30px;
+		  display: block;
+	}
+}
+.menu-top-header {
+	
 	&__list {
 		display: flex;
 		flex-wrap: wrap;
@@ -62,6 +83,15 @@
 				text-decoration: underline;
 			}
 		}
+	}
+	&__item {
+		&_catalog{
+			@media (min-width: $tablet){
+				display: none;		  
+			}
+		}
+
+
 	}
 }
 .body-header {
@@ -81,19 +111,21 @@
 	&__search{
 		flex: 1 1 auto;
 		padding-right: rem(20);
-		@include adaptiveValue("padding-left", 158,20)
+		@include adaptiveValue("padding-left", 158, 20, 1620, 1400, 1)
 	}
 }
 .actions-header {
 	display: flex;
 	align-items: center;
 	column-gap: rem(30);
-
+	@include adaptiveValue("colunm-gap", 30, 20, 1620, 1000, 1);
+	
 	&__location {
 		display: inline-flex;
 		align-items: center;
 		font-weight: 600;
 		margin: 0 rem(25) 0 0;
+		@include adaptiveValue("margin-right", 25, 0, 1620, 1250, 1);
 		&::before{
 			font-size: rem(24);
 			margin: 0 em(10,24) 0 0;
@@ -168,6 +200,7 @@
 		top: 100%;
 		width: 100%;
 		left: 0;
+		z-index: 2;
 		background-color: #fff;
 		padding: rem(15);
 		border-radius: rem(10);
@@ -219,6 +252,9 @@
 	&__body {
 		font-size: rem(16);
 		line-height: math.div(20 ,16 );
+		@media (max-width: em(1250)){
+			display: none;
+		}
 	}
 
 	&__sum {
@@ -305,45 +341,39 @@
 		top: 100%;
 		background-color: $mainDarkColor;
 		}
-	}
-
+}
 .sub-menu-catalog {
 
 	&__block {
-		padding-bottom: rem(30);
 		display: none;
-		justify-content: space-between;
-		&._sub-menu-open{
-			display: flex;
+		@for $var from 1 to 6{
+			&_#{$var} {
+				grid-template-columns: repeat($var, minmax(auto, rem(320)));
 			}
+		}
+		&._sub-menu-open{
+			display: grid;
+		}
 	}
 
-	&__column {
-		flex: 1 1 auto;
-		display: grid;
-		display: flex;
-		flex-direction: column;
+	&__container {
+		padding: 0 rem(10);
 	}
 
 	&__category {
 		font-size: rem(16);
 		line-height: math.div(20 ,16 );
 		font-weight: 700;
-		padding: rem(30) rem(10);
-		align-self: start;
+		padding: rem(30) rem(15) rem(30) 0;
 	}
 
 	&__list {
-		flex: 1 1 auto;
 		display: flex;
 		flex-direction: column;
 		gap: rem(20);
 		border-top: 1px solid rgba(255, 255, 255, 0.3);
 		border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-		padding: rem(30) rem(10);
-	}
-
-	&__item {
+		padding: rem(30) rem(15) rem(30) 0;
 	}
 
 	&__link {
@@ -356,12 +386,14 @@
 		}
 	}
 
+	&__footer {
+		padding: rem(30) rem(15) rem(30) 0;
+	}
+
 	&__all {
 		color:  #e8aa31;
 		font-size: rem(16);
 		transition: all 0.3s ease 0s;
-		padding: rem(30) rem(10) 0 rem(10);
-		align-self: flex-start;
 		@media (any-hover: hover){
 			&:hover{
 				font-weight: 700;
@@ -376,11 +408,10 @@
 // Burger
 
 .icon-menu {
-	display: none;
-	@media (max-width: $mobile) {
+	@media (max-width: $tablet) {
 		display: block;
 		position: relative;
-		flex: 0 0 30px;
+		width: 30px;
 		height: rem(18);
 		cursor: pointer;
 		z-index: 5;
